--- a/Pagcompra/src/app/componentes/pagcarrito/pagcarrito.component.html
+++ b/Pagcompra/src/app/componentes/pagcarrito/pagcarrito.component.html
@@ -1,9 +1,4 @@
 <body style="width: 100%; height: auto;">
-    
-    
-    <div style="background-color: white;">
-        <br>
-    </div>
 
     <div style="background-color: gainsboro;">
         <br>
@@ -27,13 +22,173 @@
         </div>
     </div>
 
+
+
     <div style="background-color: white;">
         <br>
+        <div style="justify-content: space-between ;flex-direction: column; display: flex;">
+
+
+            <br>
+            <div style="justify-content: space-between ;flex-direction: row; display: flex; padding-left: 20px; padding-right: 40px; width: 70%; ">
+                <div style="border-color: black;">
+                    <img src="https://www.todohogar.com/215591-medium_default/audifonos-gamer-luz-led-35mm-con-microfono-h8321s-marvo.jpg" alt="marvo H8321S" width="240px" height="240px">
+                </div>
+                <p style="text-align: center;">Audifonos gamer<br>H8321S Marvo</p>
+               
+                <p style="text-align: center; color: black;">$75.00</p>
+
+                <div>
+                    <p>Cantidad</p>
+                </div>
+                <div>
+                    <button style="color: white; background-color: gray;">COMPRAR</button>
+                </div>
+                
+            </div>
+            <br>
+            <br>
+            <div style="justify-content: space-between ;flex-direction: row; display: flex; padding-left: 20px; padding-right: 40px; width: 70%; ">
+                <div style="border-color: black;">
+                    <img src="https://www.todohogar.com/215591-medium_default/audifonos-gamer-luz-led-35mm-con-microfono-h8321s-marvo.jpg" alt="marvo H8321S" width="240px" height="240px">
+                </div>
+                <p style="text-align: center;">Audifonos gamer<br>H8321S Marvo</p>
+               
+                <p style="text-align: center; color: black;">$75.00</p>
+
+                <div>
+                    <p>Cantidad</p>
+                </div>
+                <div>
+                    <button style="color: white; background-color: gray;">COMPRAR</button>
+                </div>
+                
+            </div>
+            <br>
+            <br>
+            <div style="justify-content: space-between ;flex-direction: row; display: flex; padding-left: 20px; padding-right: 40px; width: 70%; ">
+                <div style="border-color: black;">
+                    <img src="https://www.todohogar.com/215591-medium_default/audifonos-gamer-luz-led-35mm-con-microfono-h8321s-marvo.jpg" alt="marvo H8321S" width="240px" height="240px">
+                </div>
+                <p style="text-align: center;">Audifonos gamer<br>H8321S Marvo</p>
+               
+                <p style="text-align: center; color: black;">$75.00</p>
+
+                <div>
+                    <p>Cantidad</p>
+                </div>
+                <div>
+                    <button style="color: white; background-color: gray;">COMPRAR</button>
+                </div>
+                
+            </div>
+            <br>
+            <br>
+            <div style="justify-content: space-between ;flex-direction: row; display: flex; padding-left: 20px; padding-right: 40px; width: 70%; ">
+                <div style="border-color: black;">
+                    <img src="https://www.todohogar.com/215591-medium_default/audifonos-gamer-luz-led-35mm-con-microfono-h8321s-marvo.jpg" alt="marvo H8321S" width="240px" height="240px">
+                </div>
+                <p style="text-align: center;">Audifonos gamer<br>H8321S Marvo</p>
+               
+                <p style="text-align: center; color: black;">$75.00</p>
+
+                <div>
+                    <p>Cantidad</p>
+                </div>
+                <div>
+                    <button style="color: white; background-color: gray;">COMPRAR</button>
+                </div>
+                
+            </div>
+            <br>
+            <br>
+            <div style="justify-content: space-between ;flex-direction: row; display: flex; padding-left: 20px; padding-right: 40px; width: 70%; ">
+                <div style="border-color: black;">
+                    <img src="https://www.todohogar.com/215591-medium_default/audifonos-gamer-luz-led-35mm-con-microfono-h8321s-marvo.jpg" alt="marvo H8321S" width="240px" height="240px">
+                </div>
+                <p style="text-align: center;">Audifonos gamer<br>H8321S Marvo</p>
+               
+                <p style="text-align: center; color: black;">$75.00</p>
+
+                <div>
+                    <p>Cantidad</p>
+                </div>
+                <div>
+                    <button style="color: white; background-color: gray;">COMPRAR</button>
+                </div>
+                
+            </div>
+            <br>
+            <br>
+            <div style="justify-content: space-between ;flex-direction: row; display: flex; padding-left: 20px; padding-right: 40px; width: 70%; ">
+                <div style="border-color: black;">
+                    <img src="https://www.todohogar.com/215591-medium_default/audifonos-gamer-luz-led-35mm-con-microfono-h8321s-marvo.jpg" alt="marvo H8321S" width="240px" height="240px">
+                </div>
+                <p style="text-align: center;">Audifonos gamer<br>H8321S Marvo</p>
+               
+                <p style="text-align: center; color: black;">$75.00</p>
+
+                <div>
+                    <p>Cantidad</p>
+                </div>
+                <div>
+                    <button style="color: white; background-color: gray;">COMPRAR</button>
+                </div>
+                
+            </div>
+            <br>
+            <br>
+            <div style="justify-content: space-between ;flex-direction: row; display: flex; padding-left: 20px; padding-right: 40px; width: 70%; ">
+                <div style="border-color: black;">
+                    <img src="https://www.todohogar.com/215591-medium_default/audifonos-gamer-luz-led-35mm-con-microfono-h8321s-marvo.jpg" alt="marvo H8321S" width="240px" height="240px">
+                </div>
+                <p style="text-align: center;">Audifonos gamer<br>H8321S Marvo</p>
+               
+                <p style="text-align: center; color: black;">$75.00</p>
+
+                <div>
+                    <p>Cantidad</p>
+                </div>
+                <div>
+                    <button style="color: white; background-color: gray;">COMPRAR</button>
+                </div>
+                
+            </div>
+            <br>
+            <br>
+            <div style="justify-content: space-between ;flex-direction: row; display: flex; padding-left: 20px; padding-right: 40px; width: 70%; ">
+                <div style="border-color: black;">
+                    <img src="https://www.todohogar.com/215591-medium_default/audifonos-gamer-luz-led-35mm-con-microfono-h8321s-marvo.jpg" alt="marvo H8321S" width="240px" height="240px">
+                </div>
+                <p style="text-align: center;">Audifonos gamer<br>H8321S Marvo</p>
+               
+                <p style="text-align: center; color: black;">$75.00</p>
+
+                <div>
+                    <p>Cantidad</p>
+                </div>
+                <div>
+                    <button style="color: white; background-color: gray;">COMPRAR</button>
+                </div>
+                
+            </div>
+            <br>
+            
+
+            <br>
+            
+            
+        </div>
+        <br>
     </div>
+
+
+
 
     <div style="background-color: gainsboro; justify-content: space-between ;flex-direction: row; display: flex;">
         
         <div style="padding-left: 10%;">
+            <br>
             <p style="color: black;"><b>Contact Us</b></p>
             
             <div style="justify-content: space-between ;flex-direction: row; display: flex;">
@@ -58,6 +213,7 @@
         
         
         <div >
+            <br>
             <P style="color: black;"><b>INFORMATION</b></P>
             <p style="color: black;">About<br><br>
                 Our company<br><br>
@@ -68,6 +224,7 @@
         </div>
 
         <div >
+            <br>
             <P style="color: black;"><b>How can we help</b></P>
             <p style="color: black;">
                 Order traicing<br><br>
@@ -80,6 +237,7 @@
         </div>
 
         <div style="padding-right: 10%;" >
+            <br>
             <P style="color: black;"><b>Account</b></P>
             <p style="color: black;">
                 My Account<br><br>
