--- a/Pagcompra/src/app/componentes/pagcarrito/pagcarrito.component.html
+++ b/Pagcompra/src/app/componentes/pagcarrito/pagcarrito.component.html
@@ -26,158 +26,275 @@
 
     <div style="background-color: white;">
         <br>
-        <div style="justify-content: space-between ;flex-direction: column; display: flex;">
+        <div style="justify-content: space-between ;flex-direction: column; display: flex; padding-left: 10%;">
 
 
             <br>
-            <div style="justify-content: space-between ;flex-direction: row; display: flex; padding-left: 20px; padding-right: 40px; width: 70%; ">
+            <div style="justify-content: space-between ;flex-direction: row; display: flex; width: 70%; height: 240px; border: black 2px solid; padding-right: 2%; ">
                 <div style="border-color: black;">
                     <img src="https://www.todohogar.com/215591-medium_default/audifonos-gamer-luz-led-35mm-con-microfono-h8321s-marvo.jpg" alt="marvo H8321S" width="240px" height="240px">
                 </div>
-                <p style="text-align: center;">Audifonos gamer<br>H8321S Marvo</p>
-               
-                <p style="text-align: center; color: black;">$75.00</p>
+                
+                <div>
+                    <p>INFORMACION PRODUCTO</p>
+                    <p style="text-align: center;">Audifonos gamer<br>H8321S Marvo</p>
+                </div>
 
                 <div>
-                    <p>Cantidad</p>
+                    <p>PRECIO PRODUCTO</p>
+                    <p style="text-align: center; color: black;">$75.00</p>
                 </div>
+                
                 <div>
-                    <button style="color: white; background-color: gray;">COMPRAR</button>
+                    <p>Cantidad</p>
+                    <span>{{p1}}</span>
+                </div>
+
+                <div>
+                    <p>COSTO TOTAL</p>
+                    ${{resultado}}.00
+                </div>
+
+                <div>
+                    <br>
+                    <button style="color: white; background-color: gray; width: 100px; height: 40px;">COMPRAR</button>
                 </div>
                 
             </div>
             <br>
             <br>
-            <div style="justify-content: space-between ;flex-direction: row; display: flex; padding-left: 20px; padding-right: 40px; width: 70%; ">
+            <div style="justify-content: space-between ;flex-direction: row; display: flex; width: 70%; height: 240px; border: black 2px solid; padding-right: 2%; ">
                 <div style="border-color: black;">
-                    <img src="https://www.todohogar.com/215591-medium_default/audifonos-gamer-luz-led-35mm-con-microfono-h8321s-marvo.jpg" alt="marvo H8321S" width="240px" height="240px">
+                    <br>
+                    <img src="https://m.media-amazon.com/images/I/618Qw03SJSS._AC_SX679_.jpg" alt="laptop dell 15" width="240px" height="190px">
                 </div>
-                <p style="text-align: center;">Audifonos gamer<br>H8321S Marvo</p>
-               
-                <p style="text-align: center; color: black;">$75.00</p>
+                
+                <div>
+                    <p>INFORMACION PRODUCTO</p>
+                    <p style="text-align: center;">Dell Inspiron 15<br>Laptop</p>
+                </div>
 
                 <div>
-                    <p>Cantidad</p>
+                    <p>PRECIO PRODUCTO</p>
+                    <p style="text-align: center; color: black;">$980.00</p>
                 </div>
+                
                 <div>
-                    <button style="color: white; background-color: gray;">COMPRAR</button>
+                    <p>Cantidad</p>
+                    <span>{{p2}}</span>
+                </div>
+
+                <div>
+                    <p>COSTO TOTAL</p>
+                    ${{resultado2}}.00
+                </div>
+
+                <div>
+                    <br>
+                    <button style="color: white; background-color: gray; width: 100px; height: 40px;">COMPRAR</button>
                 </div>
                 
             </div>
             <br>
             <br>
-            <div style="justify-content: space-between ;flex-direction: row; display: flex; padding-left: 20px; padding-right: 40px; width: 70%; ">
+            <div style="justify-content: space-between ;flex-direction: row; display: flex; width: 70%; height: 240px; border: black 2px solid; padding-right: 2%; ">
                 <div style="border-color: black;">
-                    <img src="https://www.todohogar.com/215591-medium_default/audifonos-gamer-luz-led-35mm-con-microfono-h8321s-marvo.jpg" alt="marvo H8321S" width="240px" height="240px">
-                </div>
-                <p style="text-align: center;">Audifonos gamer<br>H8321S Marvo</p>
-               
-                <p style="text-align: center; color: black;">$75.00</p>
-
-                <div>
-                    <p>Cantidad</p>
-                </div>
-                <div>
-                    <button style="color: white; background-color: gray;">COMPRAR</button>
+                    <img src="https://mobilestore.ec/wp-content/uploads/2019/11/AirPods-Pro-Mobile-Store-Ecuador5.jpg" alt="airposdspro-apple" width="220px" height="220px">
                 </div>
                 
+                <div>
+                    <p>INFORMACION PRODUCTO</p>
+                    <p style="text-align: center;">Apple Airpods pro</p>
+                </div>
+
+                <div>
+                    <p>PRECIO PRODUCTO</p>
+                    <p style="text-align: center; color: black;">$980.00</p>
+                </div>
+                
+                <div>
+                    <p>Cantidad</p>
+                    <span>{{p3}}</span>
+                </div>
+
+                <div>
+                    <p>COSTO TOTAL</p>
+                    ${{resultado3}}.00
+                </div>
+
+                <div>
+                    <br>
+                    <button style="color: white; background-color: gray; width: 100px; height: 40px;">COMPRAR</button>
+                </div>      
             </div>
             <br>
             <br>
-            <div style="justify-content: space-between ;flex-direction: row; display: flex; padding-left: 20px; padding-right: 40px; width: 70%; ">
+            <div style="justify-content: space-between ;flex-direction: row; display: flex; width: 70%; height: 240px; border: black 2px solid; padding-right: 2%; ">
                 <div style="border-color: black;">
-                    <img src="https://www.todohogar.com/215591-medium_default/audifonos-gamer-luz-led-35mm-con-microfono-h8321s-marvo.jpg" alt="marvo H8321S" width="240px" height="240px">
-                </div>
-                <p style="text-align: center;">Audifonos gamer<br>H8321S Marvo</p>
-               
-                <p style="text-align: center; color: black;">$75.00</p>
-
-                <div>
-                    <p>Cantidad</p>
-                </div>
-                <div>
-                    <button style="color: white; background-color: gray;">COMPRAR</button>
+                    <br>
+                    <img src="https://tiaecuador.vtexassets.com/arquivos/ids/202094/V0F3D220103152JC8F8.jpg?v=1754500228" alt="Lenovo gaming" width="240px" height="180px">
                 </div>
                 
+                <div>
+                    <p>INFORMACION PRODUCTO</p>
+                    <p style="text-align: center;">LAPTOP LENOVO<BR> IDEAPAD GAMING 3 15.6</p>
+                </div>
+
+                <div>
+                    <p>PRECIO PRODUCTO</p>
+                    <p style="text-align: center; color: black;">$1299.00</p>
+                </div>
+                
+                <div>
+                    <p>Cantidad</p>
+                    <span>{{p4}}</span>
+                </div>
+
+                <div>
+                    <p>COSTO TOTAL</p>
+                    ${{resultado4}}.00
+                </div>
+
+                <div>
+                    <br>
+                    <button style="color: white; background-color: gray; width: 100px; height: 40px;">COMPRAR</button>
+                </div>      
             </div>
             <br>
             <br>
-            <div style="justify-content: space-between ;flex-direction: row; display: flex; padding-left: 20px; padding-right: 40px; width: 70%; ">
+            <div style="justify-content: space-between ;flex-direction: row; display: flex; width: 70%; height: 240px; border: black 2px solid; padding-right: 2%; ">
                 <div style="border-color: black;">
-                    <img src="https://www.todohogar.com/215591-medium_default/audifonos-gamer-luz-led-35mm-con-microfono-h8321s-marvo.jpg" alt="marvo H8321S" width="240px" height="240px">
-                </div>
-                <p style="text-align: center;">Audifonos gamer<br>H8321S Marvo</p>
-               
-                <p style="text-align: center; color: black;">$75.00</p>
-
-                <div>
-                    <p>Cantidad</p>
-                </div>
-                <div>
-                    <button style="color: white; background-color: gray;">COMPRAR</button>
+                    <br>
+                    <img src="https://goodprice.com.ec/web/image/product.product/479/image?unique=461c3c1" alt="marvo H8321S" width="230px" height="230px">
                 </div>
                 
+                <div>
+                    <p>INFORMACION PRODUCTO</p>
+                    <p style="text-align: center;">CELULAR SAMSUNG<br>GALAXY A02S</p>
+                </div>
+
+                <div>
+                    <p>PRECIO PRODUCTO</p>
+                    <p style="text-align: center; color: black;">$179.00</p>
+                </div>
+                
+                <div>
+                    <p>Cantidad</p>
+                    <span>{{p5}}</span>
+                </div>
+
+                <div>
+                    <p>COSTO TOTAL</p>
+                    ${{resultado5}}.00
+                </div>
+
+                <div>
+                    <br>
+                    <button style="color: white; background-color: gray; width: 100px; height: 40px;">COMPRAR</button>
+                </div>      
             </div>
             <br>
             <br>
-            <div style="justify-content: space-between ;flex-direction: row; display: flex; padding-left: 20px; padding-right: 40px; width: 70%; ">
+            <div style="justify-content: space-between ;flex-direction: row; display: flex; width: 70%; height: 240px; border: black 2px solid; padding-right: 2%; ">
                 <div style="border-color: black;">
-                    <img src="https://www.todohogar.com/215591-medium_default/audifonos-gamer-luz-led-35mm-con-microfono-h8321s-marvo.jpg" alt="marvo H8321S" width="240px" height="240px">
-                </div>
-                <p style="text-align: center;">Audifonos gamer<br>H8321S Marvo</p>
-               
-                <p style="text-align: center; color: black;">$75.00</p>
-
-                <div>
-                    <p>Cantidad</p>
-                </div>
-                <div>
-                    <button style="color: white; background-color: gray;">COMPRAR</button>
+                    <br>
+                    <img src="https://portal-center.com/wp-content/uploads/2016/03/LEGION-Y540.png" alt="Laptop Lenovo Legion Y540 Gaming" width="190px" height="190px">
                 </div>
                 
+                <div>
+                    <p>INFORMACION PRODUCTO</p>
+                    <p style="text-align: center;">Laptop Lenovo Legion<br>Y540 Gaming</p>
+                </div>
+
+                <div>
+                    <p>PRECIO PRODUCTO</p>
+                    <p style="text-align: center; color: black;">$1790.00</p>
+                </div>
+                
+                <div>
+                    <p>Cantidad</p>
+                    <span>{{p6}}</span>
+                </div>
+
+                <div>
+                    <p>COSTO TOTAL</p>
+                    ${{resultado6}}.00
+                </div>
+
+                <div>
+                    <br>
+                    <button style="color: white; background-color: gray; width: 100px; height: 40px;">COMPRAR</button>
+                </div>      
             </div>
             <br>
             <br>
-            <div style="justify-content: space-between ;flex-direction: row; display: flex; padding-left: 20px; padding-right: 40px; width: 70%; ">
+            <div style="justify-content: space-between ;flex-direction: row; display: flex; width: 70%; height: 240px; border: black 2px solid; padding-right: 2%; ">
                 <div style="border-color: black;">
-                    <img src="https://www.todohogar.com/215591-medium_default/audifonos-gamer-luz-led-35mm-con-microfono-h8321s-marvo.jpg" alt="marvo H8321S" width="240px" height="240px">
-                </div>
-                <p style="text-align: center;">Audifonos gamer<br>H8321S Marvo</p>
-               
-                <p style="text-align: center; color: black;">$75.00</p>
-
-                <div>
-                    <p>Cantidad</p>
-                </div>
-                <div>
-                    <button style="color: white; background-color: gray;">COMPRAR</button>
+                    
+                    <img src="https://crecos.vtexassets.com/arquivos/ids/201283/IPH12P-128-NE-W.jpg?v=637439130421130000" alt="Apple iPhone" width="230px" height="230px">
                 </div>
                 
+                <div>
+                    <p>INFORMACION PRODUCTO</p>
+                    <p style="text-align: center;">Celular Apple iPhone<br>12 Pro P89655 </p>
+                </div>
+
+                <div>
+                    <p>PRECIO PRODUCTO</p>
+                    <p style="text-align: center; color: black;">$1818.60</p>
+                </div>
+                
+                <div>
+                    <p>Cantidad</p>
+                    <span>{{p7}}</span>
+                </div>
+
+                <div>
+                    <p>COSTO TOTAL</p>
+                    ${{resultado7}}
+                </div>
+
+                <div>
+                    <br>
+                    <button style="color: white; background-color: gray; width: 100px; height: 40px;">COMPRAR</button>
+                </div>      
             </div>
             <br>
             <br>
-            <div style="justify-content: space-between ;flex-direction: row; display: flex; padding-left: 20px; padding-right: 40px; width: 70%; ">
+            <div style="justify-content: space-between ;flex-direction: row; display: flex; width: 70%; height: 240px; border: black 2px solid; padding-right: 2%; ">
                 <div style="border-color: black;">
-                    <img src="https://www.todohogar.com/215591-medium_default/audifonos-gamer-luz-led-35mm-con-microfono-h8321s-marvo.jpg" alt="marvo H8321S" width="240px" height="240px">
-                </div>
-                <p style="text-align: center;">Audifonos gamer<br>H8321S Marvo</p>
-               
-                <p style="text-align: center; color: black;">$75.00</p>
-
-                <div>
-                    <p>Cantidad</p>
-                </div>
-                <div>
-                    <button style="color: white; background-color: gray;">COMPRAR</button>
+                    <br>
+                    <br> 
+                    <img src="https://marcimex.vtexassets.com/arquivos/ids/188536-800-auto?v=637902388820800000&width=800&height=auto&aspect=true" alt="SMART WATCH" width="230px" height="160px">
                 </div>
                 
+                <div>
+                    <p>INFORMACION PRODUCTO</p>
+                    <p style="text-align: center;">CUBITT-SMART WATCH<br>CTJR-1BK|NEGRO</p>
+                </div>
+
+                <div>
+                    <p>PRECIO PRODUCTO</p>
+                    <p style="text-align: center; color: black;">$1299.00</p>
+                </div>
+                
+                <div>
+                    <p>Cantidad</p>
+                    <span>{{p8}}</span>
+                </div>
+
+                <div>
+                    <p>COSTO TOTAL</p>
+                    ${{resultado8}}.00
+                </div>
+
+                <div>
+                    <br>
+                    <button style="color: white; background-color: gray; width: 100px; height: 40px;">COMPRAR</button>
+                </div>      
             </div>
             <br>
-            
-
             <br>
-            
-            
         </div>
         <br>
     </div>
